fix text overflow

--- a/client/css/less/components/ticket-list.less
+++ b/client/css/less/components/ticket-list.less
@@ -72,6 +72,8 @@
       margin: 0;
       padding-bottom: 4px;
       max-height: 36px;
+      overflow: hidden;
+      .box-sizing(border-box);
 
       > *:last-child {
         font-size: 12px;
